# Arbitrage-Bot

./: README.md
app/: db.py  dedupe.py  scoring.py
arbitrage-bot-v15_5_9/arbitrage-bot/: .env.example  README.md  gitignore  migrate.py  pyproject.toml
arbitrage-bot-v15_5_9/arbitrage-bot/app/: alerts.py  analytics.py  config.py  decisions.py  models.py  pipeline.py  pnl.py  queries.py  scheduler.py  trades.py
arbitrage-bot-v15_5_9/arbitrage-bot/app/dashboard/: __init__.py  pages.py
arbitrage-bot-v15_5_9/arbitrage-bot/app/normalize/: laptops.py  phones.py
arbitrage-bot-v15_5_9/arbitrage-bot/app/pricing/: comps.py  ebay_comps.py  profit.py
arbitrage-bot-v15_5_9/arbitrage-bot/app/sources/: ebay_auth.py
arbitrage-bot-v15_5_9/arbitrage-bot/app/valuation/: __init__.py  engine.py
arbitrage-bot-v15_5_9/arbitrage-bot/arbitrage_bot.egg-info/: SOURCES.txt
arbitrage-bot-v15_5_9/arbitrage-bot/tests/: test_comps.py  test_dedupe.py  test_negotiation.py  test_normalize.py  test_pnl_analytics.py  test_profit.py  test_reference_anchors.py  test_regression_v14.py  test_regression_v15_1.py  test_regression_v15_3.py  test_regression_v15_4_1.py  test_regression_v15_4_3.py  test_regression_v15_4_5.py  test_regression_v15_4_6.py  test_regression_v15_4_7.py  test_regression_v15_4_8.py  test_regression_v15_5_1.py  test_regression_v15_5_3.py  test_regression_v15_5_4.py  test_regression_v15_5_5.py  test_regression_v15_5_6.py  test_regression_v15_5_7.py  test_regression_v15_5_8.py  test_regression_v15_5_9.py  test_review_decisions.py  test_trades.py  test_valuation_engine.py
(+16 files in other folders)
