[project]
name = "arbitrage-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
